MCP: lifecycle cleanup, settings UI, --host/--port flags
- ClientMcpServer: daemon thread, remove infinite join(), add setCanvas()
- Main.java: override stop(), stage.setOnCloseRequest, cleanup
- ScreenManager: cleanup(), toggleMcpMode(), isMcpEnabled()
- GameScreen: add MCP toggle button in settings overlay
- LoginScreen: add Settings button + MCP settings overlay (host, port, toggle)
- ClientConfig: dynamic serverUrl via setServerHost/Port, getServerHost/Port
- opencode.json: disable auto-launch MCP servers (enabled: false)
- launch_mcp_client.cmd: passes --host and --port via %%*